--- a/admin/src/static/css/le-alert-comp.css
+++ b/admin/src/static/css/le-alert-comp.css
@@ -1,6 +1,6 @@
 
 .le_alert.content{
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -157,7 +157,7 @@
     border-radius: 8px;
     box-sizing: border-box;
     border: 1px solid #ebeef5;
-    position: absolute;
+    position: fixed;
     background-color: #fff;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
     transition: opacity .3s,transform .3s,left .3s,right .3s,top .4s,bottom .3s;
