--- a/admin/src/static/css/app.css
+++ b/admin/src/static/css/app.css
@@ -4,4 +4,15 @@ ul,li{
   padding: 0;
 }
 
-
+.text-center {
+  text-align: center;
+  width: 98%;
+  margin: 0 auto;
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+  height: 38px;
+  line-height: 38px;
+  background-color: #434e5b;
+  font-size: 14px;
+  color: #fff;
+}
