--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -24,6 +24,13 @@
     align-items: baseline;
 }
 
+.col2 .form-item {
+    display: flex !important;
+    flex: 1;
+    flex-direction: row;
+    align-items: center;
+}
+
 .col3 .form-item {
     display: flex !important;
     flex: 1;
