--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -2,60 +2,42 @@
     box-sizing: border-box;
 }
 
+.middleClass {
+    margin-left: 10px !important;
+}
 /* 一行放俩个 */
-.col2{
+.le_comps_core_css .col2{
     display: flex;
     flex-direction: row;
     align-items: baseline;
 }
 
-.col2 .form-item /deep/ .form-item-div{
-    flex: 1;
-}
-
-.middleClass {
-    margin-left: 10px !important;
-}
-
-.col3 {
+/* 一行放3个 */
+.le_comps_core_css .col3 {
     width: 90%;
     display: flex;
     flex-direction: row;
     align-items: baseline;
 }
 
-.col2 .form-item {
-    display: flex !important;
-    flex: 1;
-    flex-direction: row;
-    align-items: center;
-}
-
-.col3 .form-item {
-    display: flex !important;
-    flex: 1;
-    flex-direction: row;
-    align-items: center;
-}
-
-.col3 .form-item .form-item-div {
-    flex: 1;
-}
-
-.col4 {
+/* 一行放4个 */
+.le_comps_core_css .col4 {
     display: flex;
     flex-direction: row;
     align-items: baseline;
 }
 
-.col4 .form-item {
+.le_comps_core_css .col2 .form-item,
+.le_comps_core_css .col3 .form-item,
+.le_comps_core_css .col4 .form-item {
     display: flex !important;
     flex: 1;
     flex-direction: row;
     align-items: center;
 }
-
-.col4 .form-item .form-item-div {
+.le_comps_core_css .col2 .form-item /deep/ .form-item-div,
+.le_comps_core_css .col3 .form-item /deep/ .form-item-div,
+.le_comps_core_css .col4 .form-item /deep/ .form-item-div {
     flex: 1;
 }
 
