--- a/admin/src/core/comps/alert/alert.css
+++ b/admin/src/core/comps/alert/alert.css
@@ -122,27 +122,35 @@
     margin: 0;
     margin-left:10px;
     font-size:14px;
+    vertical-align: middle;
 }
 
 .le_alert.MsgAlertBox .Alertcontent .alert_btnGroup{
 	text-align: right;
 }
 
-.le_alert.MsgAlertBox .Alertcontent .alert_btnGroup span.btn{
-	height: 30px;
-    line-height: 30px;
-    padding: 0 10px;
-    background-color: red;
+.le_alert.MsgAlertBox .Alertcontent .alert_btnGroup .btn{
+    height: 32px;
+    line-height: 32px;
+    display: inline-block;
+    width: 56px;
+    text-align: center;
+    background-color: #409eff;
     color: #fff;
     font-size: 14px;
     border: none;
     border-radius: 3px;
     outline: none;
     margin: 0 5px;
+    vertical-align: bottom;
     cursor: pointer;
 }
 
-.le_alert.MsgAlertBox .Alertcontent .alert_btnGroup span.cancel{
+.le_alert.MsgAlertBox .Alertcontent .alert_btnGroup .btn:hover{
+    opacity: 0.7;
+}
+
+.le_alert.MsgAlertBox .Alertcontent .alert_btnGroup .cancel{
 	background-color: #fff;
 	color: #000;
 	border:1px solid  #ddd;
