--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -93,7 +93,7 @@
     margin-left: 26px;
 }
 
-.el_form_row_item /deep/ .requireed::before {
+.el_form_row_item /deep/ .required::before {
     position: relative;
 }
 
