--- a/Core_UI_Lib/comps/leComponents.css
+++ b/Core_UI_Lib/comps/leComponents.css
@@ -114,3 +114,38 @@
     margin-bottom: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
+
+/* 组件后面显示的提示信息 */
+.el_form_row_item .warning{
+    height: 18px;
+    line-height: 18px;
+    margin: 0;
+    font-size: 12px;
+    color: #f56c6c;
+}
+
+input::-webkit-input-placeholder { /* WebKit browsers */
+    color: #b7b8bb;
+}
+input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color: #b7b8bb;
+}
+input::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color: #b7b8bb;
+}
+input:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color: #b7b8bb;
+}
+
+textarea::-webkit-input-placeholder{
+    color: #b7b8bb;
+}
+textarea::-moz-placeholder{   /* Mozilla Firefox 19+ */
+    color: #b7b8bb;
+}
+textarea:-moz-placeholder{    /* Mozilla Firefox 4 to 18 */
+    color: #b7b8bb;
+}
+textarea:-ms-input-placeholder{  /* Internet Explorer 10-11 */ 
+    color: #b7b8bb;
+}
