--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -126,26 +126,34 @@
 
 input::-webkit-input-placeholder { /* WebKit browsers */
     color: #b7b8bb;
+    font-size: 14px;
 }
 input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
     color: #b7b8bb;
+    font-size: 14px;
 }
 input::-moz-placeholder { /* Mozilla Firefox 19+ */
     color: #b7b8bb;
+    font-size: 14px;
 }
 input:-ms-input-placeholder { /* Internet Explorer 10+ */
     color: #b7b8bb;
+    font-size: 14px;
 }
 
 textarea::-webkit-input-placeholder{
     color: #b7b8bb;
+    font-size: 14px;
 }
 textarea::-moz-placeholder{   /* Mozilla Firefox 19+ */
     color: #b7b8bb;
+    font-size: 14px;
 }
 textarea:-moz-placeholder{    /* Mozilla Firefox 4 to 18 */
     color: #b7b8bb;
+    font-size: 14px;
 }
 textarea:-ms-input-placeholder{  /* Internet Explorer 10-11 */ 
     color: #b7b8bb;
+    font-size: 14px;
 }
