--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -245,8 +245,14 @@ html,body{
     position: relative;
 }
 
-
-
+.form-item .tip{
+    font-size: 12px;
+    color: #f56c6c;
+    line-height: 20px;
+    text-align: left;
+    position: absolute;
+    margin: 0;
+}
 
 
 
