改变tip的颜色

--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -223,7 +223,7 @@ html,body{
 
 .form-item .tip{
     font-size: 12px;
-    color: #f56c6c;
+    color: #3ea5d2;
     line-height: 20px;
     text-align: left;
     position: absolute;
