--- a/admin/src/core/comps/leComponents.css
+++ b/admin/src/core/comps/leComponents.css
@@ -43,6 +43,19 @@
     flex-direction: row;
     align-items: baseline;
 }
+.le_comps_core_css .pageName{
+    font-size: 16px;
+    text-align: left;
+    padding: 10px 22px;
+    border-bottom: 1px solid #eae4e4;
+}
+
+.le_comps_core_css .le_page_name{
+    font-size: 16px;
+    text-align: left;
+    padding: 10px 22px;
+    border-bottom: 1px solid #eae4e4;
+}
 
 .warning {
     color: red;
@@ -99,7 +112,7 @@
 .second-level h1 {
     padding: 12px 0;
     margin-bottom: 20px;
- le_form_row_item: 1px solid rgba(0, 0, 0, .12);
+    border: 1px solid rgba(0, 0, 0, .12);
 }
 
 /* 组件后面显示的提示信息 */
