--- a/admin/src/core/comps/alert/alert.css
+++ b/admin/src/core/comps/alert/alert.css
@@ -133,7 +133,7 @@
     height: 32px;
     line-height: 32px;
     display: inline-block;
-    width: 56px;
+    /* width: 56px; */
     text-align: center;
     background-color: #409eff;
     color: #fff;
@@ -144,6 +144,7 @@
     margin: 0 5px;
     vertical-align: bottom;
     cursor: pointer;
+    padding: 0 5px;
 }
 
 .le_alert.MsgAlertBox .Alertcontent .alert_btnGroup .btn:hover{
