--- a/Core_UI_Lib/comps/alert/alert.css
+++ b/Core_UI_Lib/comps/alert/alert.css
@@ -133,7 +133,7 @@
     height: 32px;
     line-height: 32px;
     display: inline-block;
-    /* width: 56px; */
+    min-width: 56px;
     text-align: center;
     background-color: #409eff;
     color: #fff;
