--- a/admin/src/static/css/font-awesome.css
+++ b/admin/src/static/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('//p3.lefile.cn/fes/cms/2020/03/15/fhda8150xlyiy6kbvaunmsa9lsih1e410543.eot?v=4.7.0');
+  src: url('//p3.lefile.cn/fes/cms/2020/03/15/fhda8150xlyiy6kbvaunmsa9lsih1e410543.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('//p4.lefile.cn/fes/cms/2020/03/15/mlg2keyazbxfwti16mxwju9o73s5gs731535.woff?v=4.7.0') format('woff'), url('//p3.lefile.cn/fes/cms/2020/03/15/kr1xcnt5tb9mdsp9w1jucn987rzcw3905717.ttf?v=4.7.0') format('truetype'), url('//p4.lefile.cn/fes/cms/2020/03/15/blft6v4plv3w1ab1cw8hdvd8rzdjti543154.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
