--- a/admin/src/static/css/font-awesome.css
+++ b/admin/src/static/css/font-awesome.css
@@ -7,7 +7,11 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('//p3-nec.static.pub/fes/cms/2020/03/15/fhda8150xlyiy6kbvaunmsa9lsih1e410543.eot?v=4.7.0');
-  src: url('//p3-nec.static.pub/fes/cms/2020/03/15/fhda8150xlyiy6kbvaunmsa9lsih1e410543.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('//p2-nec.static.pub/fes/cms/2020/03/16/6qqc95s6wxg830wrkhw9iysj09o4wh424637.woff2?v=4.7.0') format('woff2'), url('//p4-nec.static.pub/fes/cms/2020/03/15/mlg2keyazbxfwti16mxwju9o73s5gs731535.woff?v=4.7.0') format('woff'), url('//p3-nec.static.pub/fes/cms/2020/03/15/kr1xcnt5tb9mdsp9w1jucn987rzcw3905717.ttf?v=4.7.0') format('truetype'), url('//p4-nec.static.pub/fes/cms/2020/03/15/blft6v4plv3w1ab1cw8hdvd8rzdjti543154.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('//p3-nec.static.pub/fes/cms/2020/03/15/fhda8150xlyiy6kbvaunmsa9lsih1e410543.eot?#iefix&v=4.7.0') format('embedded-opentype'), 
+    /* url('//p2-nec.static.pub/fes/cms/2020/03/16/6qqc95s6wxg830wrkhw9iysj09o4wh424637.woff2?v=4.7.0') format('woff2'), */
+    url('//p4-nec.static.pub/fes/cms/2020/03/15/mlg2keyazbxfwti16mxwju9o73s5gs731535.woff?v=4.7.0') format('woff'), 
+    url('//p3-nec.static.pub/fes/cms/2020/03/15/kr1xcnt5tb9mdsp9w1jucn987rzcw3905717.ttf?v=4.7.0') format('truetype'), 
+    url('//p4-nec.static.pub/fes/cms/2020/03/15/blft6v4plv3w1ab1cw8hdvd8rzdjti543154.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
